[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/HomeMenu.gd" type="Script" id=1]
[ext_resource path="res://banner_1.png" type="Texture" id=2]
[ext_resource path="res://UI/ScrollingBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://MansalvaRegular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Winchester/buttontheme.tres" type="Theme" id=5]
[ext_resource path="res://banner2.png" type="Texture" id=6]
[ext_resource path="res://banner3.png" type="Texture" id=7]
[ext_resource path="res://Winchester/font2.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[node name="HomeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" parent="." instance=ExtResource( 3 )]

[node name="MakeSchedule" type="Button" parent="."]
margin_left = 14.3591
margin_top = 550.63
margin_right = 552.359
margin_bottom = 655.132
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Make New Schedule"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadSchedule" type="Button" parent="."]
margin_left = 14.359
margin_top = 698.771
margin_right = 552.359
margin_bottom = 803.273
rect_pivot_offset = Vector2( 99.162, 21.125 )
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Load a Schedule"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Label" parent="."]
margin_left = 203.559
margin_top = 854.566
margin_right = 243.559
margin_bottom = 873.566
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -73.9999
margin_bottom = 6.0
color = Color( 0.309804, 0.309804, 0.309804, 0.52549 )

[node name="Label" type="Label" parent="ColorRect"]
margin_right = 576.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Programming: Jason Song; Design: Yueran Jia, Leo Qian, Heneni Dong; \\n Moral Support: Nathaniel Bing Su"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 288.181, 205.565 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 4 )
frame = 1
playing = true
[connection signal="pressed" from="MakeSchedule" to="." method="_on_MakeSchedule_pressed"]
[connection signal="pressed" from="LoadSchedule" to="." method="_on_LoadSchedule_pressed"]
